--- a/WebContent/resources/css/styles.css
+++ b/WebContent/resources/css/styles.css
@@ -22,8 +22,9 @@
 #cssmenu ul ul {
   display: none;
 }
-#cssmenu > ul > li.active > ul {
+#cssmenu > ul > li.active{
   display: block;
+  font-weight:bold;
 }
 .align-right {
   float: right;
@@ -124,3 +125,82 @@
 nav.top1.navbar.navbar-default.navbar-static-top {
     background-color: rgb(6, 217, 149);
     font-family: 'Roboto', sans-serif;
+}
+.homepageimg img{
+margin-top: -250px;
+    float: right;
+    position: static;
+    margin-right: 150px;
+    height: 350px;
+    width: auto;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 29px;
+}
+
+.switch input {display:none;}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: -3px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+pre{
+	display:block;
+	font:100% "Courier New", Courier, monospace;
+	padding:10px;
+	border:1px solid #bae2f0;
+	background:#e3f4f9;	
+	margin:.5em 0;
+	overflow:auto;
+	width:800px;
+}
+.userlist{
+	float: right;
+    width: 82%;
+    margin-top: -250px;
+}
